--- a/limits-service/src/main/resources/bootstrap.yml
+++ b/limits-service/src/main/resources/bootstrap.yml
@@ -4,3 +4,8 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
